--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,18 +7,21 @@ jobs:
   build:
     docker:
     # Use the same Docker base as the project
-      - image: python:3.7.3-stretch
+      image: python:3.7.3-stretch
 
     working_directory: ~/repo
 
     steps:
-      - checkout
+      checkout
 
       # Download and cache dependencies
-      - restore_cache:
-        key: v1-dependencies-{{ checksum "requirements.txt" }}
+      restore_cache:
+        key:
+          v1-dependencies-{{ checksum "requirements.txt" }}
+          # fallback to using the latest cache if no exact match is found
+          v1-dependencies-
 
-      - run:
+      run:
         name: install dependencies
         command: |
           python3 -m venv venv
@@ -27,13 +30,13 @@ jobs:
           # Install hadolint
           wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
           chmod +x /bin/hadolint
-      - save_cache:
+      save_cache:
         paths:
           - ./venv
         key: v1-dependencies-{{ checksum "requirements.txt" }}
 
       # run lint!
-      - run:
+      run:
         name: run lint
         command: |
           . venv/bin/activate
