--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,26 +2,20 @@
 #
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
-version: 2.0
+version: 2
 jobs:
   build:
+    working_directory: ~/repo
     docker:
     # Use the same Docker base as the project
-      image: python:3.7.3-stretch
-
-    working_directory: ~/repo
-
+      - image: python:3.7.3-stretch
     steps:
-      checkout
-
+      - checkout
       # Download and cache dependencies
-      restore_cache:
-        key:
-          v1-dependencies-{{ checksum "requirements.txt" }}
-          # fallback to using the latest cache if no exact match is found
-          v1-dependencies-
+      - restore_cache:
+        key: v1-dependencies-{{ checksum "requirements.txt" }}
 
-      run:
+      - run:
         name: install dependencies
         command: |
           python3 -m venv venv
@@ -30,13 +24,13 @@ jobs:
           # Install hadolint
           wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
           chmod +x /bin/hadolint
-      save_cache:
+      - save_cache:
         paths:
           - ./venv
         key: v1-dependencies-{{ checksum "requirements.txt" }}
 
       # run lint!
-      run:
+      - run:
         name: run lint
         command: |
           . venv/bin/activate
