--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,7 @@ jobs:
       - checkout
       # Download and cache dependencies
       - restore_cache:
-          key:
-            - v1-dependencies-{{ checksum "requirements.txt" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
 
       - run:
           name: install dependencies
